# libxrsp

./: CMakeLists.txt  README.md
samples/: CMakeLists.txt  pair_and_echo.cc
src/: xrsp.cc  xrsp.h
